yet css blog_show and user_show user_create

--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -1,4 +1,20 @@
-<h1>Editing Blog</h1>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="<%= blogs_path %>">
+        <img alt="Brand" src="...">
+      </a>
+       <a class="navbar-brand" href="<%= user_path(current_user)  %>">
+        Profile
+      </a>
+
+    </div>
+  </div>
+</nav>
+<div class="jumbotron">
+  <h1>By <%= @User.string%></h1>
+  <p></p>
+</div>
 
 <%= render 'form' %>
 
