--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -13,12 +13,13 @@
 
   <div class="field">
     <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, class: 'form-control' %>
   </div>
   <div class="field">
     <%= f.label :content %><br>
-    <%= f.text_field :content %>
   </div>
+  <textarea class="form-control" rows="15" name="blog[content]" id="blog_content"></textarea>
+ <br>
   <div class="actions">
     <%= f.submit %>
   </div>
