--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,12 +1,26 @@
-<p id="notice"><%= notice %></p>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="<%= blogs_path %>">
+        <img alt="Brand" src="...">
+      </a>
+       <a class="navbar-brand" href="<%= user_path(current_user)  %>">
+        Profile
+      </a>
 
-<h1>Listing Blogs</h1>
+    </div>
+  </div>
+</nav>
+<div class="jumbotron">
+  <h1>By <%= @User.string%></h1>
+  <p></p>
+</div>
 
-<table>
+<table class="table table-striped table-hover table-bordered text-center">
   <thead>
-    <tr>
-      <th>Title</th>
-      <th colspan="3"></th>
+    <tr >
+      <th class='text-center'>Title</th>
+      <th class='text-center'>TimeUpdate</th>
     </tr>
   </thead>
 
@@ -14,8 +28,9 @@
     <% @blogs.each do |blog| %>
       <tr>
         <td><%= blog.title %></td>
-        <td><%= link_to 'Show', blog %></td>
-        <td><%= link_to 'Edit', edit_blog_path(blog) %></td>
+        <td><%= blog.updated_at%>
+        <td><%= link_to 'Watch', blog %></td>
+        <td><%= link_to 'Edit', edit_blog_path(@User) %></td>
         <td><%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
@@ -23,5 +38,6 @@
 </table>
 
 <br>
-
-<%= link_to 'New Blog', new_blog_path %> | <%= link_to 'JSON' , api_blogs_path(user_id: current_user)%>
+<a class="btn btn-default" href="<%= new_blog_path(user_id: current_user) %>" role="button">New Blog</a>
+<a class="btn btn-default" href="<%= api_blogs_path(user_id: current_user)%>" role="button">JSON</a>
+<%= link_to 'JSON' , api_blogs_path(user_id: current_user)%>
