--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing User</h1>
+<h1>Editing Profile</h1>
 
-<%= render 'form' %>
+<%= render 'profile' %>
 
 <%= link_to 'Show', @user %> |
 <%= link_to 'Back', users_path %>
