--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,19 +1,30 @@
-<p id="notice"><%= notice %></p>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="singin">
+        <img alt="Brand" src="...">
+      </a>
+      <a class="navbar-brand" href="edit/profile">
+        Profile
+      </a>
+    </div>
+  </div>
+</nav>
+<h1>User</h1>
 
-<h1>Listing Users</h1>
-
-<table>
+<table class="table table-striped table-hover table-bordered text-center">
   <thead>
     <tr>
-      <th>E-mail</th>
-      <th colspan="3"></th>
+      <th class ='text-center'>Email</th>
+      <th class ='text-center'>Update</th>
     </tr>
   </thead>
 
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= link_to user.string , user%></td>
+        <td><%= user.string %></td>
+        <td><%= user.updated_at %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -24,4 +35,5 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+
+
